# zkc

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/zkc-core/: Cargo.toml
backend/zkc-core/src/: air.rs  fft.rs  field.rs  fri.rs  goldilocks.rs  hash.rs  ir.rs  lib.rs  lower.rs  merkle.rs  plonkish.rs  poseidon.rs  r1cs.rs  stark.rs  transcript.rs  witness.rs
backend/zkc-core/tests/: commitment_tests.rs  core_tests.rs  fft_tests.rs  fri_tests.rs  goldilocks_tests.rs  poseidon_tests.rs  stark_poseidon_tests.rs  stark_tests.rs
backend/zkc-prove/: Cargo.toml
backend/zkc-prove/src/: lib.rs
backend/zkc-prove/tests/: arith_cli_tests.rs  stats_tests.rs
benchmarks/: many_mul.json  many_mul.zkc
compiler/: Makefile
compiler/src/: Main.hs
compiler/src/Zkc/: Diagnostics.hs  Field.hs
compiler/src/Zkc/Analysis/: Determinacy.hs  Poly.hs  Smt.hs
compiler/src/Zkc/Core/: Elaborate.hs  Ir.hs  Passes.hs
compiler/src/Zkc/Emit/: Json.hs
compiler/src/Zkc/Syntax/: Ast.hs  Lexer.hs  Parser.hs
compiler/tests/: Spec.hs
docs/: CHECKPOINT.md  DESIGN_DECISIONS.md  README_phase0.md  README_phase3.md  README_phase4.md  README_phase5.md  ROADMAP.md  benchmarks.md  phase5-status.md  phase6.md
examples/: advice_outside_gadget.zkc  divide.zkc  iszero.zkc  iszero_broken.zkc  mul_square.zkc  relation.zkc  unconstrained_advice.zkc
inputs/: divide.json  divide_by_zero.json  iszero_forged.json  iszero_honest_nonzero.json  iszero_honest_zero.json  mul_square.json  relation.json
ir-spec/: SCHEMA.md
scripts/: run_all.sh
