[package]
name = "zkc-core"
version = "0.1.0"
edition = "2021"
description = "Core IR loading, witness solving, R1CS lowering and checking. Generic over the field; no proving system."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Only for the blanket ZkField impl. Phase 5's hand-written Goldilocks will
# implement the same trait, and this dependency becomes optional.
ark-ff = "0.4"

[dev-dependencies]
ark-bn254 = "0.4"